sfdx-source/main/default/objects/VCC_Site__c/fields/VCC_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Site_Code__c</fullName>
    <description>The 3 digit Site Code for the Site</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>