sfdx-source/main/default/objects/VCC_Site__c/fields/VCC_Sta3n__c.field-meta.xml
<CustomField>
    <fullName>VCC_Sta3n__c</fullName>
    <description>The number of the site.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sta3n</label>
    <length>10</length>
    <type>Text</type>
</CustomField>