sfdx-source/main/default/objects/VCC_Site__c/fields/VCC_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the VISN that the Site is aligned with.</description>
    <label>VISN</label>
    <referenceTo>VCC_VISN__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>