sfdx-source/main/default/objects/VCC_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_Sta3n__c</columns>
    <columns>VCC_Site_Code__c</columns>
    <columns>VCC_VISN__c</columns>
    <columns>VCC_Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>